--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -8,11 +8,10 @@
         - article.errors.full_messages.each do |message|
           li
             = message
-  .field
+  .form-group
     = form.label :title
-    = form.text_field :title
-  .field
+    = form.text_field :title, class: 'form-control'
+  .form-group
     = form.label :text
-    = form.text_field :text
-  .actions
-    = form.submit
+    = form.text_area :text, class: 'form-control'
+  = form.submit class: 'btn btn-primary m-1'
