--- a/app/views/articles/edit.html.slim
+++ b/app/views/articles/edit.html.slim
@@ -1,6 +1,5 @@
 h1
   | Editing Article
 = render 'form', article: @article
-= link_to 'Show', @article
-|  | 
-= link_to 'Back', articles_path
+= link_to 'Show', @article, class: 'btn btn-primary m-1'
+= link_to 'Back', articles_path, class: 'btn btn-primary m-1'
