--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -1,4 +1,5 @@
 h1
+.nav.justify-content-end
   | New Article
 = render 'form', article: @article
-= link_to 'Back', articles_path
+= link_to 'Back', articles_path, class: 'btn btn-primary'
