--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -8,6 +8,5 @@ p
   strong
     | Text:
   = @article.text
-= link_to 'Edit', edit_article_path(@article)
-|  | 
-= link_to 'Back', articles_path
+= link_to 'Edit', edit_article_path(@article), class: 'btn btn-primary mx-1'
+= link_to 'Back', articles_path, class: 'btn btn-primary mx-1'
