--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -2,4 +2,4 @@ h1
 .nav.justify-content-end
   | New Article
 = render 'form', article: @article
-= link_to 'Back', articles_path, class: 'btn btn-primary'
+= link_to 'Back', articles_path, class: 'btn btn-primary m-1'
